<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/to_get_you_started"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iconBell"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
                app:layout_constraintEnd_toStartOf="@+id/iconBack"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textViewStarted"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_notification" />

            <ImageView
                android:id="@+id/iconBack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
                app:layout_constraintEnd_toStartOf="@+id/iconSettings"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iconBell"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_recent" />

            <ImageView
                android:id="@+id/iconSettings"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iconBack"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_settings" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewStarted">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:scrollbars="horizontal">

                    <com.example.innovaodev3.extensions.MusicItemImageView
                        android:id="@+id/musicItem1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:description="@string/musicItem1Description"
                        app:picture="@drawable/eminem" />

                    <com.example.innovaodev3.extensions.MusicItemImageView
                        android:id="@+id/musicItem2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:description="@string/musicItem2Description"
                        app:picture="@drawable/xxxtentacion" />

                    <com.example.innovaodev3.extensions.MusicItemImageView
                        android:id="@+id/musicItem3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:description="@string/musicItem3Description"
                        app:picture="@drawable/eminemix" />


                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/textViewElse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/try_something_else"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewElse">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:scrollbars="horizontal">

                    <com.example.innovaodev3.extensions.MusicItemImageView
                        android:id="@+id/musicElseItem1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:description="@string/musicElseItem1Description"
                        app:picture="@drawable/turkeyhotlist" />

                    <com.example.innovaodev3.extensions.MusicItemImageView
                        android:id="@+id/musicElseItem2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:description="@string/musicElseItem2Description"
                        app:picture="@drawable/nkvt" />

                    <com.example.innovaodev3.extensions.MusicItemImageView
                        android:id="@+id/musicElseItem3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:description="@string/musicElseItem3Description"
                        app:picture="@drawable/tbt" />


                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/textViewFeatured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/featured_charts"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontalScrollView2" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFeatured">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:scrollbars="horizontal">

                    <com.example.innovaodev3.extensions.MusicItemImageView
                        android:id="@+id/musicItemFeature1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:description="@string/musicItemFeature1Description"
                        app:picture="@drawable/topsongsglobal" />

                    <com.example.innovaodev3.extensions.MusicItemImageView
                        android:id="@+id/musicItemFeature2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:description="@string/musicItemFeature2Description"
                        app:picture="@drawable/topsongsturkey" />

                    <com.example.innovaodev3.extensions.MusicItemImageView
                        android:id="@+id/musicItemFeature3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:description="@string/musicItemFeature3Description"
                        app:picture="@drawable/viral" />


                </LinearLayout>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>

